@@ -1,6 +1,6 @@
 <oaf_info>
 
-<oaf_server iid="OAFIID:bonobo-hello-factory:694a23d5-dbb3-4705-8b4f-2229b9b319c6" type="exe" location="bonobo-hello">
+<oaf_server iid="OAFIID:bonobo-hello-factory:413433d0-c643-4618-9c3e-2c99f4d1b2a0" type="exe" location="bonobo-hello">
   <oaf_attribute name="repo_ids" type="stringv">
     <item value="IDL:Bonobo/GenericFactory:1.0"/>
   </oaf_attribute>
@@ -8,7 +8,7 @@
 </oaf_server>
 
 <oaf_server iid="OAFIID:bonobo-hello:e745f596-9e29-4bb9-8dde-fb5bfafb4782" type="factory"
-	location="OAFIID:bonobo-hello-factory:694a23d5-dbb3-4705-8b4f-2229b9b319c6">
+	location="OAFIID:bonobo-hello-factory:413433d0-c643-4618-9c3e-2c99f4d1b2a0">
   <oaf_attribute name="repo_ids" type="stringv">
     <item value="IDL:Bonobo/Unknown:1.0"/>
     <item value="IDL:Bonobo/Embeddable:1.0"/>
